eks-terraform-ecr-ingress-setup/k8s-manifests/confluence-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2022-07-25T16:50:35Z"
  generation: 1
  labels:
    app: confluence-deploy
  name: confluence-deploy
  namespace: default
  resourceVersion: "14859"
  uid: c46294ec-5898-48ef-9f8c-54e8e17efe29
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: confluence-deploy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: confluence-deploy
    spec:
      containers:
      - image: 370441086528.dkr.ecr.eu-west-2.amazonaws.com/test:1.0
        imagePullPolicy: IfNotPresent
        name: test
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
