eks-terraform-ecr-ingress-setup/k8s-manifests/confluenec-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: confluence-svc
  name: confluence-svc
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: confluence-deploy
  type: ClusterIP
status:
  loadBalancer: {}
