eks-terraform-ecr-ingress-setup/k8s-manifests/confluence-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: confluence-svc
            port:
              number: 8090
